; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_unix_shared.c_Sys_Milliseconds.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_unix_shared.c_Sys_Milliseconds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@sys_timeBase = common dso_local global i32 0, align 4
@curtime = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Sys_Milliseconds() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.timeval, align 4
  %3 = call i32 @gettimeofday(%struct.timeval* %2, i32* null)
  %4 = load i32, i32* @sys_timeBase, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %12, label %6

6:                                                ; preds = %0
  %7 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* @sys_timeBase, align 4
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = sdiv i32 %10, 1000
  store i32 %11, i32* %1, align 4
  br label %23

12:                                               ; preds = %0
  %13 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @sys_timeBase, align 4
  %16 = sub nsw i32 %14, %15
  %17 = mul nsw i32 %16, 1000
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = sdiv i32 %19, 1000
  %21 = add nsw i32 %17, %20
  store i32 %21, i32* @curtime, align 4
  %22 = load i32, i32* @curtime, align 4
  store i32 %22, i32* %1, align 4
  br label %23

23:                                               ; preds = %12, %6
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
